# rust-debug

./: Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSE
docs/: api.md  architecture.md
src/: formatting.rs  layer.rs  lib.rs  span.rs  tests.rs  tracing_init.rs
tests/: basic.rs  enabled.rs  tracing_init_existing_subscriber.rs  tracing_init_file_error.rs
